css/scss/mobile.scss
/* ... */
/* == 5. SINGLE POST == */
.single-area {
  .main-header {
    text-align: center;
  }
  .content-area {
    max-width: 750px;
    line-height: 1.8;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
  .entry-meta {
    text-align: center;
  }
}
.single-related {
  background-color: var(--s-light);
  .s-title {
    color: var(--s-text);
  }
}

/* == AUTHOR PROFILE == */
.entry-author {
  margin: var(--s-space) auto;
  text-align: center;
  .pic {
    margin: 8px;
    img {
      border-radius: 100%;
      width: 80px;
      height: 80px;
      object-fit: contain;
    }
  }
  .desc {
    font-size: 0.875em;
    margin-top: 5px;
  }
  .name {
    font-size: 1.125em;
    margin-bottom: 0;
  }
  a {
    color: var(--s-text);
    &:hover {
      color: var(--s-accent);
    }
  }
  &.-head {
    .entry-title {
      margin-bottom: 5px;
    }
  }
}

/* == 6. WIDGETS == */
.widget-area {
  .current-menu-item > a {
    font-weight: bold;
    color: var(--s-accent);
  }
  .widget_nav_menu {
    li {
      margin-bottom: 6px;
      &:last-child {
        margin-bottom: 0;
      }
    }
    .sub-menu {
      padding: 5px 0 0 12px;
      li {
        margin-bottom: 5px;
        position: relative;
      }
    }
  }
  ul {
    padding: 0;
    margin-bottom: 10px;
  }
  li {
    list-style: none;
  }
  a {
    color: var(--s-text);
    &:hover {
      color: var(--s-accent-hover);
    }
  }
}
.widget {
  margin-bottom: var(--s-space);
}
.widget-title {
  margin-bottom: 10px;
  font-size: 1.375em;
}

/* == ERROR 404 == */
.error-404 {
  text-align: center;
  .search-form {
    margin: 0 auto 30px;
  }
}

/* == 7. FOOTER == */

.site-footer-space {
  height: var(--s-footer-height);
}
.site-footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  color: var(--s-text);
  background-color: var(--s-bg);
  font-family: var(--s-heading);
  font-size: 0.875rem;
  a {
    color: var(--s-text);
    &:hover {
      color: var(--s-accent-hover);
    }
  }
  hr {
    border-color: var(--s-text);
    opacity: 0.3;
  }
  ul {
    padding-left: 0;
    margin-bottom: 0;
  }
  p {
    margin-bottom: var(--s-space);
  }
  li {
    list-style: none;
  }
  .menu {
    font-weight: normal;
  }
  h2,
  .widget-title {
    font-size: 1.125em;
  }
  .textwidget {
    p:last-of-type {
      margin-bottom: 0;
    }
  }
  .widget_nav_menu {
    line-height: 2em;
  }
  .wp-block-social-links .wp-social-link a {
    padding: unset;
  }
}
.footer-bar {
  font-size: 0.75em;
  padding: 16px 0;
  text-align: center;
  text-transform: uppercase;
  color: var(--s-text);
  background-color: var(--s-bg);
  a {
    color: var(--s-text);
    &:hover {
      color: var(--s-accent-hover);
    }
  }
}

.footer-row {
  padding: var(--s-space) 0;
}

@media (max-width: 991px) {
  .footer-col {
    width: 100% !important;
  }
  .site-footer {
    .widget {
      position: relative;
      padding-bottom: 12px;
      margin-bottom: 12px;
      &.has-title:after {
        content: '';
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
        height: 1px;
        background-color: var(--s-text);
        opacity: 0.3;
      }
      &.active {
        .widget-title {
          &:after {
            transform: translateY(-60%) rotate(45deg);
          }
          & + div,
          & + ul {
            height: auto;
            padding-top: 6px;
            overflow: visible;
          }
        }
      }
    }
    .widget-title {
      position: relative;
      margin-bottom: 0;
      &:after {
        position: absolute;
        font-family: Arial, Helvetica, sans-serif;
        content: '+';
        font-size: 1.1em;
        right: 0;
        top: 50%;
        transform: translateY(-50%);
        line-height: 1;
        transition: 0.3s;
      }
      & + div,
      & + ul {
        height: 0;
        padding: 0;
        overflow: hidden;
        transition: 0.3s;
      }
    }
  }
}

